--- a/css/style.css
+++ b/css/style.css
@@ -454,3 +454,17 @@ section h2 span {
 		padding: 0 30px;
 	}
 }
+table{
+	width: 100%;
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+table th,table td{
+padding: 10px 0;
+text-align: center;
+}
+
+table tr:nth-child(odd){
+background-color: #eee
+}
