--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ a:active, a:focus,input:active, input:focus{outline:0;}
 	position: relative;
   overflow: hidden;
   width: 100%;
-  height: 528px;
+  height: 500px;
 }
 
 #mainImg img{
@@ -467,4 +467,12 @@ text-align: center;
 
 table tr:nth-child(odd){
 background-color: #eee
+}
+
+table th{
+	background-color: rgb(141, 141, 141)
+}
+
+table th font{
+	color: white;
 }
